[package]
name = "regionx-runtime-common"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
codec = { workspace = true }
scale-info = { workspace = true }

sp-core = { workspace = true, default-features = false }
sp-consensus-aura = { workspace = true }
sp-runtime = { workspace = true, default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
    "scale-info/std",
    "sp-core/std",
    "sp-consensus-aura/std",
    "sp-runtime/std",
]
