[package]
name = "regionx-primitives"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }

sp-core = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }

[features]
default = ["std"]
std = [
	"parity-scale-codec/std",
    "scale-info/std",
    "sp-core/std",
    "sp-runtime/std",
]
